--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,15 @@
 body {
-    background-image: url('./images/Programing .webp');
+    background-image: url('./images/laptop.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     z-index: -2;
 }
 
+
+
+@media screen and (max-width: 600px){
+    .icons{
+        font-size: 20px !important;
+    }
+}
