--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,5 @@
 body {
-    background-image: url("../src/assets/images/laptop.jpeg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: #6c757d!important;
     background-size: cover;
     z-index: -2;
 }
