--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,8 @@
+html,
 body {
-    background-color: #6c757d!important;
-    background-size: cover;
-    z-index: -2;
+    background-color: #374151; /* Tailwind gray-700 */
+    min-height: 100vh;
+    z-index: -2 !important;
 }
 @media screen and (max-width: 600px){
     .icons{
